--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,6 @@
 
 tasks:
   - command: pip install -r requirements.txt
-  - command: python main.py
+  - command: python -m streamlit run main.py
 
 
